kubernetes/gabernetes/apps/envoy-gateway/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: same-namespace
  namespace: envoy-gateway-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-public
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      app.kubernetes.io/name: envoy
      gateway.envoyproxy.io/owning-gateway-name: public
  ingress:
    - fromEntities:
        - world
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kgateway-system
            app.kubernetes.io/name: public
            app.kubernetes.io/instance: public
            app.kubernetes.io/component: proxy
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: longhorn-system
            app: longhorn-ui
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kgateway-system
            app.kubernetes.io/name: public
            app.kubernetes.io/instance: public
            app.kubernetes.io/component: proxy
